# ai-job-impact-europe

./: .env.example  .gitignore  AI labs' labor market research.md  LICENSE-CODE  LICENSE-DATA  README.md  implications.draft.html  occupations.csv  occupations_by_country.csv  phase3.1-build-plan-final.md  project-status-2026-03-19.md  pyproject.toml  scores.json  uk_scores.json
data/: layer_scores.json
data/adoption/: anthropic_task_pct_v2.csv  microsoft_ai_applicability.csv  soc2_merged.csv  triangulated_adoption.csv
data/bfs/: employment_ch_bfs.csv  je-d-03.02.01.21.xlsx  je-d-03.04.01.00.41.xlsx  je-d-03.04.01.02.47.xlsx  je-d-03.04.01.03.41.xlsx  je-d-03.04.01.20.41.xlsx  wages_ch_bfs.csv
data/dalio/: Big Debt Crises -- Ray Dalio.txt  Principles for Dealing with the Changing World Order -- Ray Dalio.txt  changing_world_order.txt
data/esco/: esco_processed.json
data/manual/: ai_act_high_risk.json
data/mazzucato/: The Value of Everything_ Making and Taking in the Global -- Mazzucato, Mariana.epub  The entrepreneurial state _ debunking public vs_ private -- Mazzucato, Mariana .epub  entrepreneurial_state.txt  (+2 more)
scripts/: 01_prepare_esco.py  02_fetch_eurostat.py  03_build_occupations.py  04_score.py  05_build_site_data.py  06_ai_act_classify.py  06_fetch_bfs.py  07_fetch_ons.py  09_score_uk_regulated.py  10_fetch_growth.py  11_fetch_education.py  12_compute_layers.py  13_fetch_adoption_data.py
site/: _redirects  analysis.html  data.json  implications.html  index.html  llms.txt  methodology.html  questions.html  robots.txt  sitemap.xml  sources.html
(+28 files in other folders)
